----------------------------------------------------------------------
 OmegaT 3.1.0 update 1
----------------------------------------------------------------------
   4 Enhancements
   3 Bug fixes
   3 Localisation updates
----------------------------------------------------------------------
3.1.0 update 1 vs. 3.1.0

  Implemented requests:

  - Add Illustrator xml export format support to the SVG filter
  https://sourceforge.net/p/omegat/feature-requests/987/

  - Allow using <trans-unit> ID as identifier of alternative translations in XLIFF filter 
  https://sourceforge.net/p/omegat/feature-requests/989/

  Other enhancements:

  - In replace mode, "Cancel" was replaced by "Finish", because
"Cancel" could lead to believe that changes already done would be
undone

  - By giving an email in -Dmymemory.api.email for MyMemory machine 
translation, it is possible to use 1000 requests per day instead 
of 100 ones

  Bug fixes:

  - When using a search or replace filter, the last change made before 
removing the filter or pressing Cancel could be lost

  - Alternative translation overwrites the default one in team project
  https://sourceforge.net/p/omegat/bugs/678/

  - "Properties..." menu is disabled in team projects 
  https://sourceforge.net/p/omegat/bugs/673/

  Localisation updates:

  - Dutch localisation updated to 3.1.0 (UI, Documentation, Readme)
  - Galician localisation updated to 3.1.0 (UI, Documentation, Readme)
  - Italian localisation updated to 3.1.0 (UI, Documentation)

----------------------------------------------------------------------
 OmegaT 3.1.0 (2014-04-14)
----------------------------------------------------------------------
  34 Enhancements
   7 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.0 vs. 3.0.8 update 5

  Implemented requests:

  - Add facility for conflict resolution during team sync
  https://sourceforge.net/p/omegat/feature-requests/950/
